@@ -468,6 +468,9 @@ BUGFIXES:
   ZOOKEEPER-1499. clientPort config changes not backwards-compatible
   (Alexander Shraer via phunt, breed)
 
+  ZOOKEEPER-1798. Fix race condition in testNormalObserverRun
+  (thawan, fpj via thawan)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
